# findfat

./: README.md  findfat.py  pyproject.toml
